fixed background video not playing on mobile devises issue

--- a/src/Routes/Nav.scss
+++ b/src/Routes/Nav.scss
@@ -71,8 +71,8 @@
           
             .burger{
             
-                width: 40px;
-               height: 45px;
+                width: 45px;
+               height: 50px;
                 display: none;
                cursor: pointer;
             }
@@ -104,6 +104,7 @@
         display: block;
         
     
+
        
     
          .Nav-links{
@@ -114,6 +115,7 @@
              flex-direction: column;
           align-items: flex-end;
           position: absolute;
+        
           top: 100%;
           right: 0;
           margin: 0;
@@ -162,6 +164,8 @@
 
                 .burger{
                     display: flex;
+                   
+                  
                     
                 }
 
@@ -181,7 +185,11 @@
         }
 
         
-
+        .logo{
+         
+           height: 50px;
+            }
+           
       
 
     }
